Quite some cleanup and further improvements on the task scheduling